basic search sampling